// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditPatternModal /> should render a modal button with as create 1`] = `
<span>
  <button
    className="btn btn-success"
    onClick={[Function]}
    type="button"
  >
    Create pattern
  </button>
</span>
`;

exports[`<EditPatternModal /> should render a modal button with as edit 1`] = `
<span>
  <button
    className="btn btn-info btn-xs"
    onClick={[Function]}
    type="button"
  >
    <span>
      Edit
    </span>
  </button>
</span>
`;
